Owlbear encounter positioned

--- a/map.html
+++ b/map.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6LTKJE21pYmBhAU0PiVndEyb7YZ9Cepo&sensor=true"></script>
+    <script src="infobox/infobox.js" type="text/javascript"></script>
+    <script type="text/javascript" src="app.js"></script>
   </head>
+
   <body>
-    Hello World!
-  <script src="app.js"></script>
+    <div id="dungeon-map"></div>
   </body>
 </html>
