refactored some code

--- a/map.html
+++ b/map.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6LTKJE21pYmBhAU0PiVndEyb7YZ9Cepo&sensor=true"></script>
     <script src="infobox/infobox.js" type="text/javascript"></script>
+    <script src="markers.js" type="text/javascript"> </script>
     <script type="text/javascript" src="app.js"></script>
   </head>
 
