--- a/map.html
+++ b/map.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="map_style.json"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6LTKJE21pYmBhAU0PiVndEyb7YZ9Cepo&sensor=true"></script>
     <script src="infobox/infobox.js" type="text/javascript"></script>
     <script src="markers.js" type="text/javascript"> </script>
