--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="map_style.json"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6LTKJE21pYmBhAU0PiVndEyb7YZ9Cepo&sensor=true"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="infobox/infobox.js" type="text/javascript"></script>
     <script src="markers.js" type="text/javascript"> </script>
     <script type="text/javascript" src="app.js"></script>
